@@ -56,6 +56,13 @@ Release 0.22b.dev (unpublished)
     docutils version in header
   - Stop converting text to full capitals (bug #481).
 
+* docutils/writers/docutils-xml.py
+
+  - Do not increase indentation of follow-up lines inside inline elements.
+    when formatting with `indents`_.
+
+
+
 Release 0.21.2 (2024-04-23)
 ===========================
 
